--- a/Deep_Lab2.ipynb
+++ b/Deep_Lab2.ipynb
@@ -39,6 +39,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
@@ -51,10 +52,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c250627-1106-4053-82d2-454f3308c6fa"
+        "outputId": "7c250627-1106-4053-82d2-454f3308c6fa",
+        "collapsed": true
       },
       "id": "4eQUagXlZb3X",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +108,7 @@
         "id": "V9oMYEf6Zbz5"
       },
       "id": "V9oMYEf6Zbz5",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +142,7 @@
         "id": "EdUWOIv3Zbwk"
       },
       "id": "EdUWOIv3Zbwk",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +170,7 @@
         "outputId": "dbf87b82-e513-48f6-987e-17acd2719231"
       },
       "id": "0EMgpSCuZbt2",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +205,7 @@
         "outputId": "bb51a195-2d96-4eee-9a05-eab0d5ae7961"
       },
       "id": "aAHYoAggZbqw",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +241,7 @@
         "outputId": "6e6d0834-d086-470e-a831-7163608e9128"
       },
       "id": "Oug35xp3ZbhV",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +270,7 @@
         "outputId": "4d6ef0f3-b9a0-45fd-af73-c9dfc7c714f2"
       },
       "id": "HDdnM0kzcjva",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +303,7 @@
         "id": "MS9CrKQNcjjK"
       },
       "id": "MS9CrKQNcjjK",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +337,7 @@
         "outputId": "a33d96bc-8e40-403f-849e-76f13779ad8b"
       },
       "id": "kc3x3sKgrIOm",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -406,7 +408,7 @@
         "outputId": "4a020fa5-4ed4-4d29-bcb0-87512845a3c2"
       },
       "id": "s2mtXU_1cjOd",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -482,7 +484,7 @@
         "outputId": "eeabb16d-1201-49a7-b933-40a778176ee4"
       },
       "id": "N530Y_HSZvfn",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,10 +530,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8bad86c4-d869-4a20-9b93-37424b8d8bd1"
+        "outputId": "8bad86c4-d869-4a20-9b93-37424b8d8bd1",
+        "collapsed": true
       },
       "id": "IDLAv5h5ZvcQ",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,6 +631,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Applying NN on Small Dataset of IRIS\n",
+        "# Result: accuracy is not reliable as dataset is too small and as can be seen accuracy an loss curve oscilate\n",
+        "\n",
         "from sklearn.datasets import load_iris\n",
         "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -669,7 +675,7 @@
         "        callbacks.EarlyStopping(monitor='val_loss', patience=8, restore_best_weights=True, verbose=0),\n",
         "        callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=4, min_lr=1e-6, verbose=0)\n",
         "    ]\n",
-        "\n",
+        "# As Dataset is too small, here K-Fold Cross Validation is utilized to reach reliable accuracy\n",
         "# Stratified K-Fold evaluation (k=5)\n",
         "kf = StratifiedKFold(n_splits=5, shuffle=True, random_state=RND)\n",
         "fold_scores = []\n",
@@ -721,8 +727,8 @@
         "axes[0].legend()\n",
         "axes[0].grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
-        "# Plot Accuracy on the second subplot (if available)\n",
-        "if \"accuracy\" in last_fold_hist_data:\n",
+        "# Plot Accuracy on the second subplot\n",
+        "if \"accuracy\" in last_fold_hist_data:  #=> Last fold in history used for Accuracy and Loss graphs\n",
         "    axes[1].plot(epochs_last_fold, pd.Series(last_fold_hist_data[\"accuracy\"]).rolling(window=smoothing_window).mean(), label=\"train acc\")\n",
         "    if \"val_accuracy\" in last_fold_hist_data:\n",
         "        axes[1].plot(epochs_last_fold, pd.Series(last_fold_hist_data[\"val_accuracy\"]).rolling(window=smoothing_window).mean(), label=\"val acc\")\n",
@@ -736,7 +742,7 @@
         "plt.savefig(\"iris_last_fold_history.png\", dpi=300, bbox_inches='tight') # Save the combined figure\n",
         "plt.show() # Display the combined figure\n",
         "\n",
-        "# Final train on full training set and evaluate on a held-out test split (optional)\n",
+        "# Final train on full training set and evaluate on a held-out test split\n",
         "X_tr, X_test, y_tr, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=RND)\n",
         "final_model = make_model(lr=1e-3, hidden=8, l2=1e-3, dropout=0.25)\n",
         "final_model.fit(X_tr, y_tr, validation_split=0.2, epochs=100, batch_size=8,\n",
@@ -753,7 +759,7 @@
         "outputId": "e0a107f1-02bc-41da-eb0d-332fe2c86379"
       },
       "id": "YCAAd60iZvZa",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,6 +818,7 @@
       "cell_type": "code",
       "source": [
         "# Improved Fashion-MNIST training: small CNN + augmentation + callbacks\n",
+        "# Data set : fashion_mnist\n",
         "from tensorflow.keras.datasets import fashion_mnist\n",
         "from tensorflow.keras import layers, models, callbacks, optimizers\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
@@ -901,10 +908,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "eee9b270-d786-4387-d2b2-9cd07b6c3dfe"
+        "outputId": "eee9b270-d786-4387-d2b2-9cd07b6c3dfe",
+        "collapsed": true
       },
       "id": "pTuww9dLZvWh",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1070,7 +1078,7 @@
         "outputId": "55392eaf-01d9-4fe1-8e1b-66aa61a23212"
       },
       "id": "6YmNfrsFZvN1",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1104,6 +1112,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Investigating the Impacts of Learning Rate on Regression Model Applied on California Dataset\n",
+        "\n",
         "for lr in [0.001, 0.0001]:\n",
         "    print(\"\\nLR =\", lr)\n",
         "    model_lr = build_regressor(lr=lr)\n",
@@ -1125,7 +1135,7 @@
         "outputId": "8726160f-b6e6-452f-d624-336d46bd4419"
       },
       "id": "g1_omzG7aJtG",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
